Update tycho and java version related to Bug 543639
  This udpate the version of tycho to 0.22.0 in order to specify
  the Java 8 for the runtime of bundles.
  This also impacts the maven variables used in the sites projects.
  Variable such as "osgi.os" has to be changed to "tycho.env.osgi.os".

Change-Id: Id1ff4bf2c205813861ff316368cf34918c24a456
Signed-off-by: Francois Aissaoui <aissaoui@laas.fr>

--- a/org.eclipse.om2m.site.asn-cse/pom.xml
+++ b/org.eclipse.om2m.site.asn-cse/pom.xml
@@ -57,9 +57,9 @@
 						<configuration>
 							<tasks>
 								<echo>Copying scripts into asn product</echo>
-								<copy file="${basedir}/script" tofile="${basedir}/target/products/asn-cse/${osgi.os}/${osgi.ws}/${osgi.arch}/start.sh"/>
-								<copy file="${basedir}/script" tofile="${basedir}/target/products/asn-cse/${osgi.os}/${osgi.ws}/${osgi.arch}/start.bat"/>
-								<copy file="${basedir}/log4j.configuration" tofile="${basedir}/target/products/asn-cse/${osgi.os}/${osgi.ws}/${osgi.arch}/log4j.configuration"/>
+								<copy file="${basedir}/script" tofile="${basedir}/target/products/asn-cse/${tycho.env.osgi.os}/${tycho.env.osgi.ws}/${tycho.env.osgi.arch}/start.sh"/>
+								<copy file="${basedir}/script" tofile="${basedir}/target/products/asn-cse/${tycho.env.osgi.os}/${tycho.env.osgi.ws}/${tycho.env.osgi.arch}/start.bat"/>
+								<copy file="${basedir}/log4j.configuration" tofile="${basedir}/target/products/asn-cse/${tycho.env.osgi.os}/${tycho.env.osgi.ws}/${tycho.env.osgi.arch}/log4j.configuration"/>
 							</tasks>
 						</configuration>
 					</execution>
